rgw: meta sync thread crash at RGWMetaSyncShardCR

Fixes: http://tracker.ceph.com/issues/20251

Signed-off-by: fang yuxiang fang.yuxiang@eisoo.com
(cherry picked from commit 45877d38fd9a385b2f8b13e90be94d784898b0b3)